--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="features17 cid-rNuk61zoZC" id="features17-8">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="features17 cid-rNuk61zoZC" id="features17-8">
     
     
 
@@ -180,7 +180,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><br><br><br><br>Ridgecrest Elementary</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Date:  1/28/2020 - 3/17/2020<br>Days:  Tu<br>Time:  3:25 PM - 4:25 PM</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Date:  1/28/2020 - 3/17/2020<br>Days:  Tuesdays<br>Time:  3:25 PM - 4:25 PM</p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://entrada.revtrak.net/Community-Education" class="btn btn-primary display-4" target="_blank">
                             Register</a></div>
@@ -285,7 +285,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5icOXqb4rnysTBwNNoetP6jQCAnxNt7eY2xeZ5T92VMrL4BWe/zrAHGS0ju8QJ3LDo4TueSBH8MYjZdyzbZYPaAoRytnDYhP8iTuvM7sBxY8Hb4Q8M1OXQKtUs/7+ldC">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CY3xaSH+mhtPQdNmp/VFmgJWgt9/fM3fMdRzXyQHJazKGMu0YGRJXcW4l7YjKeUrIQucOHMtfhm7AsopjXOBUEs2OaR1t7y8T84vgR9S+LEDzo5BFiuvb6EWXvHQCciN">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for contacting us ! We will contact you soon</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
