--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                                 E-mail:
                             </h5>
                             <p class="mbr-text align-left mbr-fonts-style display-7">
-                                littleCodeClub@gmail.com
+                                info@littleCodeClub.com
                             </p>
                         </div>
                     </div>
