--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html  >
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics --> <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151205627-1"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'UA-151205627-1'); </script> <!-- Site made with Mobirise Website Builder v4.10.8, https://mobirise.com --> <!-- Google Tag Manager --> <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-KZXPNSQ');</script> <!-- End Google Tag Manager --> <!-- Facebook Pixel Code --> <script> !function(f,b,e,v,n,t,s) {if(f.fbq)return;n=f.fbq=function(){n.callMethod? n.callMethod.apply(n,arguments):n.queue.push(arguments)}; if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0'; n.queue=[];t=b.createElement(e);t.async=!0; t.src=v;s=b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t,s)}(window, document,'script', 'https://connect.facebook.net/en_US/fbevents.js'); fbq('init', '467658053958753'); fbq('track', 'PageView'); </script> <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=467658053958753&ev=PageView&noscript=1" /></noscript> <!-- End Facebook Pixel Code -->
   <!-- Site made with Mobirise Website Builder v4.12.1, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -50,8 +49,8 @@
                     Empowering Kids to be Future Innovators</em></h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     Our Program is designed to bring creativity and innovation in the kids. They would learn math skills, problem solving, teamwork, self-confidence. &nbsp;</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="index.html#features3-4">SPRING CLASSES</a>
-                    <a class="btn btn-md btn-success display-4" href="page1.html#header1-e">SUMMER CAMPS</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="index.html#services4-r">SPRING CLASSES</a>
+                    <a class="btn btn-md btn-success display-4" href="summer-camps.html#header1-e">SUMMER CAMPS</a></div>
             </div>
         </div>
     </div>
@@ -62,7 +61,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a website for free</a></section><section class="features17 cid-rNuk61zoZC" id="features17-8">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="features17 cid-rNuk61zoZC" id="features17-8">
     
     
 
@@ -408,7 +407,7 @@
                     Summer Camps 2020</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="https://entrada.revtrak.net/Community-Education" target="_blank">Learn more</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="summer-camps.html#header1-e" target="_blank">Learn more</a></div>
             </div>
         </div>
     </div>
@@ -466,7 +465,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ldQp+UkKPlQbgFZuOtt92HcQ6D17mh1XAQKtsYZHG5KLxQ21AiTXbLgSaSEbbxZsZJbui0aJp2hpr63MM/nuwXxVqWnVmoEkfGKCTjywlo8mfTflKrBTGjkXNK3S7uNJ">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jQEYh5FmyZo3LGPhwKkV60F22iY/AJaivyLzPwKTjKQX5UBeJVtyxNpTWjGKRjjNTC0qgxFJ0hZCBgpUbSw2N095CiQMeYql9TbTbUjU+7KHXkWZI9ryN2dVtgWrwiL8">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for contacting us ! We will contact you soon</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
