--- a/summer-camps.html
+++ b/summer-camps.html
@@ -55,7 +55,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="timeline2 cid-rSzYzJXiAQ" id="timeline2-n">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="timeline2 cid-rSzYzJXiAQ" id="timeline2-n">
 
     
 
@@ -498,7 +498,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6GWBkH9yiz1iC41vW0c6XxWy/qkyOkDb5vjaGsrgZy1GuedZ4KwLDV6tYtgKnejqv7cbLLACW8hAG+M3W5mpWBbmoawELEE89Ln3ktBwOD9z2PiVW7a8GhsvE9RoBd5j">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zambrNTrxWkSJAtvByD5XK3iV6XhjYHyti0wRhvRAGMB+UnCjid1phDMaIiZStOdKfZJ6KFiuC6N+XJsMkTM0gomJWktjNjxw6c0V/sER3Z7yO9b4YuEu3EA2vzNlXD3">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
