--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     Our Program is designed to bring creativity and innovation in the kids. They would learn math skills, problem solving, teamwork, self-confidence. &nbsp;</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="index.html#services4-r">SPRING CLASSES</a>
-                    <a class="btn btn-md btn-success display-4" href="summer-camps.html#header1-e">SUMMER CAMPS</a></div>
+                    <a class="btn btn-md btn-success display-4" href="summer-camps.html">SUMMER CAMPS</a></div>
             </div>
         </div>
     </div>
@@ -61,7 +61,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="features17 cid-rNuk61zoZC" id="features17-8">
+<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section class="features17 cid-rNuk61zoZC" id="features17-8">
     
     
 
@@ -407,7 +407,7 @@
                     Summer Camps 2020</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="summer-camps.html#header1-e" target="_blank">Learn more</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="summer-camps.html">Learn more</a></div>
             </div>
         </div>
     </div>
@@ -465,7 +465,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jQEYh5FmyZo3LGPhwKkV60F22iY/AJaivyLzPwKTjKQX5UBeJVtyxNpTWjGKRjjNTC0qgxFJ0hZCBgpUbSw2N095CiQMeYql9TbTbUjU+7KHXkWZI9ryN2dVtgWrwiL8">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZZWj0oHW9GSSiS3G6fNFbP06rqSWPo4F/3YaEOWVvNuGY6u9NyjoHDMAYn0VYpWjtYYUYhmJlMrJINXEv5s0ClDmQozwpnND3Lx/ISJhGTutU7Wwyqm0G/BgXOui/Ks0">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for contacting us ! We will contact you soon</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
